--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-slider": "^1.3.1",
+    "recharts": "^2.0.9",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
